# chinaev-intel

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
backend/: CLAUDE.md  pyproject.toml  requirements.txt
backend/config/: brand_aliases.json  glossary.json  settings.py
backend/db/: __init__.py  firestore.py
backend/processing/: __init__.py  comparison.py  dedup.py  entities.py  novelty.py  pipeline.py  prompts.py  signals.py  utils.py
backend/scrapers/: __init__.py  base.py  dynamic.py  runner.py  static.py
backend/scrapers/sources/: _36kr.py  __init__.py  autohome.py  baidu_news.py  cnevpost.py  dongchedi.py  gasgoo.py  xiaohongshu.py
backend/tests/: conftest.py
backend/tests/db/: test_firestore.py
backend/tests/fixtures/36kr/: article.html  article_minimal.html  listing.html
backend/tests/fixtures/autohome/: article.html  article_minimal.html  listing.html
backend/tests/fixtures/baidu_news/: article.html  article_minimal.html  search_results.html
backend/tests/fixtures/cnevpost/: article.html  article_minimal.html  feed.xml
backend/tests/fixtures/dongchedi/: article.html  article_minimal.html  listing.html
backend/tests/processing/: test_comparison.py  test_dedup.py  test_entities.py  test_novelty.py  test_pipeline.py  test_signals.py  test_utils.py
backend/tests/scrapers/: test_36kr.py  test_autohome.py  test_baidu_news.py  test_base.py  test_cnevpost.py  test_dongchedi.py  test_dynamic.py  test_gasgoo.py  test_runner.py  test_static.py  test_xiaohongshu.py
(+36 files in other folders)
